k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kneipe-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
